fix(studio): bound projection job workers